fieldx/tests/uncompilable/stable/serialize_deserialize_off.stderr
error: feature 'sync' is required
 --> tests/uncompilable/serialize_deserialize_off.rs
  |
  | #[fxstruct(sync, serde(serialize(off), deserialize(off)))]
  |            ^^^^
